--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "filament/filament": "^3.2",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "saade/filament-fullcalendar": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
